monitoring/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    client: "monitoring-app"
