monitoring/namespace-deny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: monitoring
  name: deny-traffic-to-monitoring-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          client: "monitoring-app"
